fix: import react global

--- a/packages/docs/src/docs/pages/home.stories.mdx
+++ b/packages/docs/src/docs/pages/home.stories.mdx
@@ -1,4 +1,4 @@
-import {Meta} from "@storybook/addon-docs";
+import { Meta } from "@storybook/addon-docs";
 
 <Meta title="Docs/Home" />
 
@@ -9,8 +9,8 @@ It is also designed to be easy to customize and to be able to be used in any pro
 
 ## Features
 
-* Simple and easy to use
-* Easy to customize
-* Easy to use in any project
-* Easy to extend
-* Easy to add new widgets
+- Simple and easy to use
+- Easy to customize
+- Easy to use in any project
+- Easy to extend
+- Easy to add new widgets
